# sumu

./: .gitignore  CLAUDE.md  DESIGN.md  README.en.md  README.md  pyproject.toml
docs/: ai_core_port.md  native_ai_input.md  native_core.md  packaging.md  porting_manifest.md  robustness_4e.md  scene_clip_blend_port.md  scheduler.md  scrub_thumbnail.md  spike3_nv12_interop.md  spike_results.md
native/: CMakeLists.txt  build.bat  smoke_player.py
native/cmake/: embed_binary.cmake  embed_shader.cmake
native/shaders/: present.hlsl
native/src/: decoder.cpp  decoder.h  player.cpp
packaging/: rthook_dll_path.py  sumu.spec
patches/: fix_loading_mmengine_weights_on_torch26_and_higher.diff  increase_mms_time_limit.patch  remove_ultralytics_telemetry.patch  remove_use_of_torch_dist_in_mmengine.patch
python/sumu/: __init__.py  app.py  i18n.py  pipeline.py  scheduler.py  settings.py
python/sumu/ai/: __init__.py  model_cache.py
python/sumu/ai/models/basicvsrpp/: __init__.py  basicvsrpp_gan.py  deformconv.py  inference.py
python/sumu/ai/models/basicvsrpp/mmagic/: __init__.py  base_edit_model.py  base_gen_metric.py  base_sample_wise_metric.py  basicvsr.py  basicvsr_plusplus_net.py  colorspace.py  concat_visualizer.py  data_preprocessor.py  data_sample.py  ema.py  evaluator.py  flow_warp.py  gan_loss.py  img_utils.py  iter_time_hook.py  log_processor.py  logger.py  loop_utils.py  loss_wrapper.py  metrics_utils.py  model_utils.py  multi_loops.py  multi_optimizer_constructor.py  perceptual_loss.py  pixelwise_loss.py  psnr.py  real_basicvsr.py  registry.py  sampler.py  setup_env.py  ssim.py  typing.py  unet_disc.py  vis_backend.py  visualization_hook.py
python/sumu/ai/models/yolo/: yolo11_segmentation_model.py
python/sumu/ai/restorationpipeline/: __init__.py  basicvsrpp_mosaic_restorer.py  basicvsrpp_sub_engines.py  basicvsrpp_trt_compilation.py  blend.py  progress.py  scene_clip.py  trt_engine_paths.py
python/sumu/ai/trt/: __init__.py  torch_tensorrt_export.py
python/sumu/ai/utils/: __init__.py  box_utils.py  cuda_dlpack.py  image_utils.py  mask_utils.py  scene_utils.py  torch_letterbox.py  ultralytics_utils.py  video_utils.py
python/sumu/locales/: en.json  ja.json  zh-CN.json
scripts/: analyze_present.py  apply_patches.sh  build_dist.ps1  gen_logo_assets.py  measure_trt_build.py  play.py  run_player.py  serve_http_test.py  stress_reopen.py  stress_seek_ai.py  sumu_main.py  verify_ai_core.py  verify_i18n.py  verify_md.py  verify_scene_clip_blend.py  verify_settings.py  verify_weights_resolve.py
spikes/: README.md
spikes/spike0_d3d11_present/: CMakeLists.txt  build.bat
spikes/spike0_d3d11_present/shaders/: nv12_to_rgb.hlsl
spikes/spike0_d3d11_present/src/: decoder.h  main.cpp
spikes/spike1_cuda_interop/: CMakeLists.txt  spike1_driver.py
spikes/spike1_cuda_interop/src/: presenter.cpp
spikes/spike2_clock_mixing/: CMakeLists.txt  analyze_switches.py  spike2_driver.py
spikes/spike2_clock_mixing/src/: decoder.cpp  presenter.cpp
spikes/spike3_nv12_interop/: CMakeLists.txt  spike3_driver.py
spikes/spike3_nv12_interop/src/: decoder.cpp  decoder.h  interop.cpp
