# SPDX-FileCopyrightText: sumu Authors
# SPDX-License-Identifier: AGPL-3.0
[project]
name = "sumu"
version = "0.2.4"
description = "Clock-driven, all-GPU realtime de-mosaic preview player"
requires-python = ">=3.12"
license = "AGPL-3.0"
# 依赖分阶段实装。Phase 2 (Spike 1) 起加 torch（cu128）+ numpy；
# Phase 4 起加 AI 核心（照搬 lada 的 nvidia extra，去掉本次不需要的 PyNvVideoCodec：
# 它只服务 lada 的 VideoReader 生产解码路径，sumu 的 AI 帧来自 native 解码头，不走 PyAV）。
dependencies = [
    "torch==2.8.0",
    "numpy",
    "pybind11",  # native 扩展的构建期头文件/CMake config
    # --- AI 核心 (Phase 4c) ---
    "ultralytics==8.4.4",       # Pinned as we apply a patch (see patches/)
    "torchvision==0.23.0",      # matched to torch 2.8.0 (cu128)
    "mmengine==0.10.7",         # Pinned as we apply a patch (see patches/)
    "av>=16.1.0",               # PyAV (one-shot test decode only; not the production path)
    "opencv-python==4.12.0.88", # cv2, used by ultralytics_utils / image_utils
    "tqdm",
    "wcwidth",
    "pillow",  # scripts/gen_logo_assets.py (logo pipeline; not a runtime player dep)
    # --- BasicVSR++ TensorRT 加速路径 (对齐 lada nvidia extra) ---

    "torch-tensorrt==2.8.0",
    "tensorrt-cu12-libs==10.12.0.36",
    "tensorrt-cu12-bindings==10.12.0.36",
]

# --- 国内镜像（继承 lada-realtime 已验证配置）---
# PyPI 默认走清华；torch cu128 走南京大学（标准 PEP503，uv 能识别 torch==2.8.0）。
# 坑：别用阿里云 flat 布局做 torch 源（uv 匹配不出干净版本 → No solution found）。
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://mirrors.nju.edu.cn/pytorch/whl/cu128"
explicit = true

[[tool.uv.index]]
# TensorRT runtime libs/bindings (tensorrt-cu12-libs / -bindings) are published
# only on NVIDIA's index; the Tsinghua mirror is stale (stops at tensorrt 10.2 /
# torch-tensorrt 2.4). Pulled transitively by torch-tensorrt.
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torch-tensorrt = { index = "pytorch-cu128" }
tensorrt-cu12-libs = { index = "nvidia" }
tensorrt-cu12-bindings = { index = "nvidia" }

# --- 构建期工具（打分发包用，不是运行时依赖）---
# PyInstaller + hooks-contrib 只在 scripts/build_dist.ps1 的 freeze 阶段用到。
# 放进 dev 组而非 [project].dependencies，这样 `uv sync` 会自动带回它们
# （历史上 venv 被重建后这两个游离在 lock 外、需手动 pip install，见 docs/packaging.md），
# 但普通运行/被 import 的依赖闭包里不会混入它们。版本对齐 docs/packaging.md。
[dependency-groups]
dev = [
    "pyinstaller==6.21.0",
    "pyinstaller-hooks-contrib==2026.6",
]

[tool.uv]
# Pin the resolution environment to the target machine (win x86_64). This stops
# uv from solving impossible splits (e.g. torch-tensorrt's tegra variant pulling
# numpy<2, clashing with opencv's numpy>=2) — same rationale as lada-realtime.
environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
